Python Kd-tree hangs blender on code below (2.8 win10) #62210

Closed
opened 2019-03-05 12:23:31 +01:00 by Jose Conseco · 7 comments

This code will stop blender if I will try add someting to kd-tree in for loop. It happens only if you insert at least 2 elements into kd-tree before loop.
Also replacing for loop with manually inserting 3 elements fixes that. Somehow only if the for loop is there the crash happens.

import mathutils
kd = mathutils.kdtree.KDTree(10)

kd.insert((1,1,1), 0)
kd.insert((1,1,2), 1) #remove this line and it will work
kd.balance()

co_find = (1,1,1)
for j in range(3):  #or replace this with manually inserting 3 elements and it will work.
    kd.insert((4+j+1,4,4), j +2)
kd.balance()
out = kd.find_range(co_find, 4) #script hangs on this line
This code will stop blender if I will try add someting to kd-tree in for loop. It happens only if you insert at least 2 elements into kd-tree before loop. Also replacing for loop with manually inserting 3 elements fixes that. Somehow only if the for loop is there the crash happens. ``` import mathutils kd = mathutils.kdtree.KDTree(10) kd.insert((1,1,1), 0) kd.insert((1,1,2), 1) #remove this line and it will work kd.balance() co_find = (1,1,1) for j in range(3): #or replace this with manually inserting 3 elements and it will work. kd.insert((4+j+1,4,4), j +2) kd.balance() out = kd.find_range(co_find, 4) #script hangs on this line ```
Author

Added subscriber: @JoseConseco

Added subscriber: @JoseConseco
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Checking...

Checking...

This issue was referenced by 301bcf771d

This issue was referenced by 301bcf771dec827138412ca6e7a25e2269eb5e9e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by f79930989d

This issue was referenced by f79930989d4f0bd04a1d524571cd25ac214020fb

This issue was referenced by ecd086ac32

This issue was referenced by ecd086ac32241c883689f3522cabc324a8e0064c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62210
No description provided.