Fix T62210: endless loop in kd tree lookup

Reset nodes after the first balance call.